--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>3.1.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc10 -->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc10</artifactId>
+            <version>19.21.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
