--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     </context-param>
     <context-param>
         <param-name>OraclePwd</param-name>
-        <param-value>TIGER</param-value>
+        <param-value>tiger</param-value>
     </context-param>
     <context-param>
         <param-name>POSTS_PER_PAGE</param-name>
@@ -61,6 +61,22 @@
         <filter-name>SetCharEncoding</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>BasicFilter</filter-name>
+        <filter-class>com.filter.BasicFilter</filter-class>
+        <init-param>
+            <param-name>FILTER_INIT_PARAM</param-name>
+            <param-value>필터 초기화 매개변수</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>BasicFilter</filter-name>
+        <url-pattern>/15/BasicFilter.jsp</url-pattern>
+    </filter-mapping>
+    
+    <listener>
+        <listener-class>com.listener.ContextListener</listener-class>
+    </listener>
 
     <servlet>
         <servlet-name>HelloServlet</servlet-name>
